<resources>
    <string-array name="languages">
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string name="app_name">NavigatorAppAndroid</string>
    <string name="app_name_logo"><u>Navigator App</u></string>
    <string name="login_text_button">Log In</string>
    <string name="sign_up_text_button">Sign Up</string>
    <string name="info_button">\?</string>
    <string name="enter_your_data_for_registration">Enter your data for registration</string>
    <string name="enter_your_data_for_registration_java">ENTER_YOUR_DATA_FOR_REGISTRATION</string>
    <string name="enter_text_from_the_picture">Enter text from the picture</string>
    <string name="enter_text_from_the_picture_java">ENTER_TEXT_FROM_THE_PICTURE</string>
    <string name="first_and_last_name">First and last name</string>
    <string name="first_and_last_name_java">FIRST_AND_LAST_NAME</string>
    <string name="email">Email</string>
    <string name="email_java">EMAIL</string>
    <string name="phone">Phone: </string>
    <string name="phone_java">PHONE</string>
    <string name="social_networks_links">Social networks links: </string>
    <string name="social_networks_links_java">SOCIAL_NETWORKS_LINKS</string>
    <string name="password">Password</string>
    <string name="password_java">PASSWORD</string>
    <string name="repeat_password">Repeat password</string>
    <string name="repeat_password_java">REPEAT_PASSWORD</string>
    <string name="choose_your_role">Choose your role</string>
    <string name="choose_your_role_java">CHOOSE_YOUR_ROLE</string>
    <string name="i_am_looking_for_a_job">I am looking for a job</string>
    <string name="i_am_looking_for_a_job_java">I_AM_LOOKING_FOR_A_JOB</string>
    <string name="i_am_looking_for_employees">I am looking for employees</string>
    <string name="i_am_looking_for_employees_java">I_AM_LOOKING_FOR_EMPLOYEES</string>
    <string name="text_from_the_picture">Text from the picture</string>
    <string name="text_from_the_picture_java">TEXT_FROM_THE_PICTURE</string>
    <string name="confirm"><u>Confirm</u></string>
    <string name="add_vote"><u>Add the vote</u></string>
    <string name="confirm_java">CONFIRM</string>
    <string name="back">Back</string>
    <string name="back_java">BACK</string>
    <string name="note_about_settings">* Pay attention to some of important settings will be
        available only after registration in your profile</string>
    <string name="note_about_settings_java">NOTE_ABOUT_SETTINGS</string>
    <string name="registration_success_message">Your registration is almost finished.To registration\'s
        finish a mail with confirmation has been sent to your email.You can close this page</string>
    <string name="search_by_profession">Search by profession</string>
    <string name="search_the_nearest_by_profession">Search the nearest by profession</string>
    <string name="search_the_best_by_profession">Search the best by profession</string>
    <string name="choose_profession_for_the_search">Choose profession for the search</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="is_auto">Is auto?</string>
    <string name="show_temporarily_inactive_employees">Show temporarily inactive employees</string>
    <string name="limit">Limit(optional)</string>
    <string name="language">Language</string>
    <string name="consider_match_language">Consider selected communication language in the search?</string>
    <string name="is_auto_required">Is auto required?</string>
    <string name="auto_is_required">Auto is required</string>
    <string name="auto_is_not_required">Auto is not required</string>
    <string name="ok"><u>OK</u></string>
    <string name="settings">Settings</string>
    <string name="upload">Upload…</string>
    <string name="set_avatar">Set avatar</string>
    <string name="employee_work_requirements">Your work requirements</string>
    <string name="do_you_have_the_drivers_license">Do you have the driver\'s license?</string>
    <string name="do_you_have_the_auto">Do you have the auto?</string>
    <string name="interface_language">Interface language</string>
    <string name="communication_languages">Communication languages: </string>
    <string name="additional_info">Additional info</string>
    <string name="your_status">Your status</string>
    <string name="active_status_description">Active - you are opened for another users in search</string>
    <string name="temporarily_inactive_status_description">Temporarily inactive - you will be active from designated date by you</string>
    <string name="inactive_status_description">Inactive - you are closed for another users in search</string>
    <string name="firm_name">Firm name</string>
    <string name="choose_your_interface_language">Choose your interface language</string>
    <string name="choose_your_interface_language_java">CHOOSE_YOUR_INTERFACE_LANGUAGE</string>
    <string name="registration_success_message_java">REGISTRATION_SUCCESS_MESSAGE</string>
    <string name="set_professions">Set info about your professions</string>
    <string name="you_have_not_set_professions">You have not set professions</string>
    <string name="choose_profession">Choose profession</string>
    <string name="write_additional_info">Write additional info about profession if it is necessary</string>
    <string name="change_password">Change password -></string>
    <string name="my_company">My company -></string>
    <string name="active">Active</string>
    <string name="active_content_description" translatable="false">active</string>
    <string name="inactive">Inactive</string>
    <string name="inactive_content_description" translatable="false">inactive</string>
    <string name="temporarily_inactive">Custom</string>
    <string name="custom_content_description" translatable="false">custom</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="show_info_about_my_vacancies">Show info about my vacancies</string>
    <string name="required_profession">Required profession :</string>
    <string name="choose_from_templates">If you have saved templates - you can choose one of them from the list and set new date and time :</string>
    <string name="no_template">No template</string>
    <string name="job_address">Job address :</string>
    <string name="start_date">Start date :</string>
    <string name="payment_and_additional_info">Payment and additional info(optional) *if you have multiple communication languages - you can double your text in appropriate languages:</string>
    <string name="delete_vacancy">Delete vacancy</string>
    <string name="my_vacancies">My vacancies</string>
    <string name="click_to_edit">Click to edit</string>
    <string name="leave_vacancy_active_after_start_date_if_quotas_are_not_filled">Leave vacancy active after start date if quotas are not filled</string>
    <string name="save_pattern">Save pattern</string>
    <string name="is_vacancy_active">Is vacancy active?</string>
    <string name="choice_communication_language_info">Choice the communication language; if you do not choice the language - it will not be taken into account in the search</string>
    <string name="sort_request">Sort request</string>
    <string name="sort_request_content_description" translatable="false">sort</string>
    <string name="filters_request">Filters</string>
    <string name="filters_request_content_description" translatable="false">filters</string>
    <string name="filters"><u>Filters :</u></string>
    <string name="sort_by"><u>Sort by :</u></string>
    <string name="sort_by_persons_name">Sort by user\'s name</string>
    <string name="sort_by_reputation">Sort by reputation</string>
    <string name="sort_by_location">Sort by user\'s location</string>
    <string name="in_radius_of">In radius of(km) </string>
    <string name="search_settings">Search settings</string>
    <string name="limit_of_positions_in_the_search">Limit of positions in the search</string>
    <string name="ignore_matched_communication_language_in_the_search">Ignore matched communication language in the search</string>
    <string name="comments_list">Comments list: sort by</string>
    <string name="open_chat">Open chat</string>
    <string name="send_offer">Send offer</string>
    <string name="choose_start_date">Choose start date :</string>
    <string name="choose_start_time">Choose start time :</string>
    <string name="send"><u>Send</u></string>
    <string name="continue_and_set_waiting_date_time">Continue and set waiting date time</string>
    <string name="enter_message">Enter message...</string>
    <string name="do_not_show_my_email">Do not show my email to other users</string>
    <string name="do_not_show_my_phone">Do not show my phone to other users</string>
    <string name="last_request">Last request</string>
    <string name="saved_requests">Saved requests</string>
    <string name="saved_persons">Saved persons</string>
    <string name="contacted_persons">Contacted persons</string>
    <string name="show_extended_info">Show extended info</string>
    <string name="additional_languages">You can choose the language that employees should know(if it is not your communication language)</string>
    <string name="additional_languages_content_description" translatable="false">additional languages</string>
    <string name="create_new_vacancy">Create new vacancy</string>
    <string name="choose_vacancy_from_my_list">Choose vacancy from my list</string>
    <string name="set_waiting_date_time">Set waiting time and date for the answer</string>
    <string name="or">Or</string>
    <string name="waiting_until_start_date_time_checkbox">Waiting until start date time</string>
    <string name="employee_status">Status: </string>
    <string name="empty">Empty</string>
    <string name="black_list">Black list</string>
    <string name="employee_status_custom">Status: will active since </string>
    <string name="do_not_show_employees_with_multivacancy">Do not show employees with multivacancy</string>
    <string name="multivacancy_is_allowed">Allow accept many vacancies in the same time</string>
    <string name="waiting">Waiting...</string>
    <string name="all">All</string>
    <string name="positive_first">Positive first</string>
    <string name="negative_first">Negative first</string>
    <string name="notification">Notification</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="add_to_black_list">Add to black list</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="remove_from_black_list">Remove from black list</string>
    <string name="user_was_added_to_favorites"> was added to favorites</string>
    <string name="user_was_removed_from_favorites"> was removed from favorites</string>
    <string name="user_was_added_to_black_list"> was added to the black list</string>
    <string name="user_was_removed_from_black_list"> was removed from the black list</string>
    <string name="save_template">Save template</string>
    <string name="name_for_template">If you save the template, give it a name</string>
    <string name="rate_user_now_or_later">You can rate the user right away or you can do it after in settings</string>
    <string name="go_to_rate_user">Go to rate the user</string>
    <string name="skip">Skip</string>
    <string name="agreed_time_has_come">The agreed time has come</string>
    <string name="hidden">Hidden</string>
    <string name="offer_has_been_sent">The offer has been sent</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="quotas_number">Quotas number: </string>
    <string name="set_acceptable_waiting_time">Set acceptable waiting time :</string>
    <string name="rating">Rating: </string>
    <string name="professions">Professions: </string>
</resources>