<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:tag="Registration activity"
    android:id="@+id/outside_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/custom_gray_blue">
        <LinearLayout
            android:id="@+id/inside_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/first_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_data_for_registration"
                android:textColor="@color/white"
                android:textSize="50sp" />
            <TextView
                android:id="@+id/fifth_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/note_about_settings"
                android:textColor="@color/red"
                android:textSize="50sp" />
            <EditText
                android:id="@+id/first_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text"
                android:drawableEnd="@drawable/ic_star"
                android:hint="@string/first_and_last_name"
                android:inputType="textMultiLine"
                android:paddingStart="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="40sp" />
            <EditText
                android:id="@+id/second_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text"
                android:drawableEnd="@drawable/ic_star"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="40sp" />
            <CheckBox
                android:id="@+id/email_hide_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text"
                android:onClick="checkRole"
                android:text="@string/do_not_show_my_email"
                android:textColor="@color/white"
                android:textSize="40sp" />
            <TextView
                android:id="@+id/second_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/choose_your_interface_language"
                android:textColor="@color/white"
                android:textSize="40sp" />
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/spinner"
                android:textAlignment="center" />
            <EditText
                android:id="@+id/third_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingStart="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="40sp" />
            <CheckBox
                android:id="@+id/phone_hide_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text"
                android:onClick="checkRole"
                android:text="@string/do_not_show_my_phone"
                android:textColor="@color/white"
                android:textSize="40sp" />
            <EditText
                android:id="@+id/fourth_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text"
                android:hint="@string/social_networks_links"
                android:inputType="textMultiLine"
                android:paddingStart="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="40sp" />
            <EditText
                android:id="@+id/fifth_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text"
                android:drawableEnd="@drawable/ic_star"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="40sp" />
            <EditText
                android:id="@+id/sixth_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text"
                android:drawableEnd="@drawable/ic_star"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="40sp" />
            <TextView
                android:id="@+id/third_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/choose_your_role"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:drawableEndCompat="@drawable/ic_star" />
            <CheckBox
                android:id="@+id/first_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text"
                android:onClick="checkRole"
                android:text="@string/i_am_looking_for_a_job"
                android:textColor="@color/white"
                android:textSize="40sp" />
            <CheckBox
                android:id="@+id/second_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text"
                android:onClick="checkRole"
                android:text="@string/i_am_looking_for_employees"
                android:textColor="@color/white"
                android:textSize="40sp" />
            <TextView
                android:id="@+id/fourth_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/enter_text_from_the_picture"
                android:textColor="@color/white"
                android:textSize="50sp"
                app:drawableEndCompat="@drawable/ic_star" />
            <ImageView
                android:id="@+id/captcha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp" />
            <EditText
                android:id="@+id/seventh_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text"
                android:hint="@string/text_from_the_picture"
                android:paddingStart="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="40sp" />
            <android.widget.Button
                android:id="@+id/first_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rectangle_button"
                android:onClick="OnConfirm"
                android:text="@string/confirm"
                android:textColor="@color/red"
                android:textSize="50sp" />
            <android.widget.Button
                android:id="@+id/second_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/rectangle_button"
                android:drawableStart="@drawable/ic_arrow_back"
                android:onClick="onBack"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="50sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>