<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/custom_gray_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/custom_gray_blue">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_profession_for_the_search"
                android:textColor="@color/white"
                android:textSize="40sp" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/spinner"
                android:textAlignment="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text"
                android:hint="@string/country"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:inputType="text"
                android:paddingStart="15dp"
                android:drawableEnd="@drawable/ic_star" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text"
                android:hint="@string/city"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:inputType="text"
                android:paddingStart="15dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/is_auto_required"
                android:textColor="@color/white"
                android:textSize="40sp" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/auto_is_required"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:background="@drawable/edit_text"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/auto_is_not_required"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:background="@drawable/edit_text"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text"
                android:hint="@string/limit"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:inputType="text"
                android:paddingStart="15dp"
                android:drawableEnd="@drawable/ic_star"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/consider_match_language"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:background="@drawable/edit_text"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/spinner"
                android:textAlignment="center"/>
            <android.widget.Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/rectangle_button"
                android:text="@string/ok"
                android:textColor="@color/red"
                android:textSize="50sp" />
        </LinearLayout>
    </ScrollView>



</LinearLayout>