<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/custom_gray_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/search_by_profession"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/search_the_nearest_by_profession"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/search_the_best_by_profession"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:drawableStart="@drawable/ic_arrow_back"/>

</LinearLayout>