<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_gray_blue">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/custom_gray_blue">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/required_profession"
            android:textColor="@color/white"
            android:textSize="40sp"/>
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_button"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/job_address"
            android:textColor="@color/white"
            android:textSize="40sp"/>
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_button"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/payment_and_additional_info"
            android:textColor="@color/white"
            android:textSize="40sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_button"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/choose_start_date"
            android:textColor="@color/white"
            android:textSize="40sp"/>
        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:visibility="visible"
            android:clickable="false"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/choose_start_time"
            android:textColor="@color/white"
            android:textSize="40sp"/>
        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/custom_green"
            android:timePickerMode="spinner"
            android:layout_marginTop="20dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/rectangle_button"
            android:textAlignment="center"
            android:text="@string/send"
            android:textColor="@color/red"
            android:textSize="50sp"/>
        <android.widget.Button
            android:id="@+id/back"
            android:onClick="onBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/rectangle_button"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:drawableStart="@drawable/ic_arrow_back"/>
    </LinearLayout>
</ScrollView>
