<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/custom_gray_blue"
    tools:context=".ChangePasswordActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/white"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:background="@drawable/edit_text"/>
    <EditText
        android:id="@+id/repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/white"
        android:hint="@string/repeat_password"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:background="@drawable/edit_text"/>
    <android.widget.Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/confirm"
        android:onClick="onConfirmClick"
        android:textColor="@color/red"
        android:textSize="50sp"/>
    <android.widget.Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle_button"
        android:onClick="onBackClick"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:drawableStart="@drawable/ic_arrow_back"/>
</LinearLayout>